--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Ldesir05/angularToDo#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.0",
     "mongoose": "^4.8.5"
   }
